# mushroom

./: .build.yml  .clang-format  .gitignore  .gitmodules  README.md  conf.c  gossip_client.c  gossip_server.c  jump.c  log.c  meson.build  mushroom.c  node.c  ring.c
hack/: clang-check.sh  clang-format.sh  cluster  version.h.meson
include/: api.h  conf.h  gossip_client.h  gossip_server.h  jump.h  log.h  map.h  node.h  ring.h  store.h  workqueue.h
schema/: api.fbs  api_request.fbs  api_response.fbs  gossip.fbs  schema.fbs
src/: api.c  conf.c  gossip_client.c  gossip_server.c  jump.c  log.c  map.c  meson.build  mushroom.c  node.c  store.c  workqueue.c
subprojects/: flatcc.wrap
subprojects/http-parser/: meson.build
subprojects/theft/: meson.build
test/: conf_test.c  jump_test.c  map_property_test.c  map_test.c  meson.build  node_test.c  ring_test.c  store_test.c  workqueue_test.c
